diesel_compile_tests/tests/ui/identifiable_missing_pk_field.stderr
error: No field with column name id
  --> $DIR/identifiable_missing_pk_field.rs:10:10
   |
10 | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^

error: No field with column name id
  --> $DIR/identifiable_missing_pk_field.rs:15:10
   |
15 | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^

error: No field with column name bar
  --> $DIR/identifiable_missing_pk_field.rs:23:15
   |
23 | #[primary_key(bar)]
   |               ^^^

error: No field with column name baz
  --> $DIR/identifiable_missing_pk_field.rs:29:15
   |
29 | #[primary_key(baz)]
   |               ^^^

error: No field with column name bar
  --> $DIR/identifiable_missing_pk_field.rs:37:20
   |
37 | #[primary_key(foo, bar)]
   |                    ^^^

error: No field with column name bar
  --> $DIR/identifiable_missing_pk_field.rs:44:20
   |
44 | #[primary_key(foo, bar)]
   |                    ^^^

error: aborting due to 6 previous errors

